syntax = "proto3";

package schedule;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "com.mapzip.schedule.grpc";
option java_outer_classname = "ScheduleProto";

// 1. 서비스 정의 (Service Definition)

service ScheduleService {
  
  // 스케줄 생성
  rpc CreateSchedule(CreateScheduleRequest) returns (CreateScheduleResponse) {
    option (google.api.http) = {
      post: "/schedule"
      body: "*"
    };
  }
  // 맛집 추천 결과 조회
  rpc GetRecommendationResults(GetRecommendationResultsRequest) returns (GetRecommendationResultsResponse) {
  }
  // 스케줄 목록 조회
  rpc GetScheduleList(GetScheduleListRequest) returns (GetScheduleListResponse) {
    option (google.api.http) = {
      get: "/schedule"
    };
  }
  // 특정 스케줄 상세 조회
  rpc GetScheduleDetail(GetScheduleDetailRequest) returns (GetScheduleDetailResponse) {
    option (google.api.http) = {
      get: "/schedule/{scheduleId}"
    };
  }
  // 맛집 선택 반영
  rpc SelectRestaurant(SelectRestaurantRequest) returns (SelectRestaurantResponse) {
    option (google.api.http) = {
      post: "/schedule/{scheduleId}/restaurant/select"
      body: "*"
    };
  }
  // 스케줄 정보 업데이트
  rpc RefreshSchedule(RefreshScheduleRequest) returns (RefreshScheduleResponse) {
    option (google.api.http) = {
      post: "/schedule/{scheduleId}/refresh"
      body: "*"
    };
  }
  // 스케줄 수정
  rpc UpdateSchedule(UpdateScheduleRequest) returns (GetScheduleDetailResponse) {
    option (google.api.http) = {
      put: "/schedule/{scheduleId}"
      body: "*"
    };
  }

  // 스케줄 삭제
  rpc DeleteSchedule(DeleteScheduleRequest) returns (DeleteScheduleResponse) {
    option (google.api.http) = {
      delete: "/schedule/{scheduleId}"
    };
  }

  // 스케줄 처리 시작 (선택 또는 업데이트 버튼)
  rpc ProcessSchedule(ProcessScheduleRequest) returns (ProcessScheduleResponse) {
    option (google.api.http) = {
      post: "/schedule/{scheduleId}/process"
      body: "*"
    };
  }
}

// 2. 공통 메시지 타입 (Common Message Types)

message Location {
  double lat = 1;
  double lng = 2;
  string name = 3;
  string address = 4;
}

message Waypoint {
  double lat = 1;
  double lng = 2;
  string name = 3;
  string arrivalTime = 4; // 경유지 도착 시간
}

message MealTimeSlot {
  string slotId = 1;          // 고유 슬롯 ID
  MealType mealType = 2;      // 식사/간식 구분
  string scheduledTime = 3;   // 예정 시간 (예: "오후 12:30")
  int32 radius = 4;           // 검색 반경 (미터, 기본값: 1000)
}

enum MealType {
  MEAL = 0;    // 식사
  SNACK = 1;   // 간식
}

message MealLocation {
  string slotId = 1;
  double lat = 2;
  double lng = 3;
  string scheduledTime = 4; // 예정 시간
}

message RestaurantRecommendation {
  string id = 1;
  string name = 2;
  string category = 3;
  string phone = 4;
  string address = 5;
  string roadAddress = 6;
  double lat = 7;
  double lng = 8;
  string detailUrl = 9;
  int32 distance = 10; // 예상 식사 지점으로부터의 거리(미터)
  string rating = 11;  // 추천서버에서 분석한 평점
  string menuInfo = 12; // 추천서버에서 분석한 메뉴 정보
}

message SelectedRestaurant {
  string slotId = 1;          // 시간 슬롯 ID
  string restaurantId = 2;    // 맛집 ID
  string name = 3;
  string scheduledTime = 4;   // 예정 시간
  string detailUrl = 5;
}

message MealSlotRecommendation {
  string slotId = 1;
  MealType mealType = 2;
  string scheduledTime = 3;
  RecommendationStatus status = 4;
  repeated RestaurantRecommendation recommendations = 5;
  string message = 6;
}

enum RecommendationStatus {
  PROCESSING = 0;    // 처리 중
  COMPLETED = 1;     // 완료
  FAILED = 2;        // 실패
}

message ScheduleError {
  ErrorType type = 1;
  string message = 2;
  string retryAfter = 3;  // API 제한일 때만
}

enum ErrorType {
  TMAP_API_FAILED = 0;
  INVALID_ROUTE = 2;        // 비현실적인 경로
  NO_RESTAURANTS_FOUND = 3;
  RECOMMENDATION_SERVICE_UNAVAILABLE = 4;
  REFRESH_RATE_LIMITED = 5; // 새로고침 제한
}

// 3. API별 요청/응답 메시지 (API-specific Messages)

// 3.1 스케줄 생성
message CreateScheduleRequest {
  string userId = 1;
  string title = 2;
  string departureTime = 3;
  string arrivalTime = 11; // 추가
  repeated MealTimeSlot mealSlots = 4;
  Location departure = 5;
  repeated Waypoint waypoints = 6;
  Location destination = 7;
  string userNote = 8;
  string purpose = 9;
  repeated string companions = 10;
}

message CreateScheduleResponse {
  string scheduleId = 1;
  string message = 2;
  bool success = 3;
  repeated string recommendationRequestIds = 4;
  string calculatedArrivalTime = 5;
  ScheduleError error = 6;
}

// 3.2 맛집 추천 결과 조회
message GetRecommendationResultsRequest {
  string scheduleId = 1;
  string userId = 2;
}

message GetRecommendationResultsResponse {
  repeated MealSlotRecommendation slotRecommendations = 1;
}

// 3.3 스케줄 목록 조회
message GetScheduleListRequest {
  string userId = 1;
}

message GetScheduleListResponse {
  message ScheduleSummary {
    string scheduleId = 1;
    string title = 2;
    string departureTime = 3;
    string destinationName = 4;
    int32 totalMealSlots = 5;
    int32 selectedRestaurantsCount = 6;
  }
  repeated ScheduleSummary schedules = 1;
}

// 3.4 특정 스케줄 상세 조회
message GetScheduleDetailRequest {
  string scheduleId = 1;
  string userId = 2;
}

message GetScheduleDetailResponse {
  message ScheduleDetail {
    string title = 1;
    string departureTime = 2;
    string calculatedArrivalTime = 3;
    repeated MealTimeSlot mealSlots = 4;
    Location departure = 5;
    repeated Waypoint waypoints = 6;
    Location destination = 7;
    string userNote = 8;
    string purpose = 9;
    repeated string companions = 10;
    repeated SelectedRestaurant selectedRestaurants = 11;
  }
  ScheduleDetail schedule = 1;
}

// 3.5 맛집 선택 반영
message SelectRestaurantRequest {
  string scheduleId = 1;
  string slotId = 2;
  string restaurantId = 3;
  string userId = 4;
  string name = 5;
  string detailUrl = 6;
}

message SelectRestaurantResponse {
  string message = 1;
  SelectedRestaurant selectedRestaurant = 2;
  bool success = 3;
}

// 3.6 스케줄 정보 업데이트
message RefreshScheduleRequest {
  string scheduleId = 1;
  string userId = 2;
}

message RefreshScheduleResponse {
  repeated string recommendationRequestIds = 1;
  string calculatedArrivalTime = 2;
  bool success = 3;
  ScheduleError error = 4;
  string nextRefreshAvailableTime = 5;
}

// 3.6.1 스케줄 처리 시작
message ProcessScheduleRequest {
  string scheduleId = 1;
  string userId = 2;
  ProcessType type = 3;
  double currentLat = 4;        // 업데이트 시 현재 GPS 위도
  double currentLng = 5;        // 업데이트 시 현재 GPS 경도
  string currentTime = 6;       // 업데이트 시 현재 시간 (ISO 8601 형식)
}

message ProcessScheduleResponse {
  GetScheduleDetailResponse.ScheduleDetail schedule = 1;
}

enum ProcessType {
  SELECT = 0;     // 스케줄 선택 시 (기존 스케줄 정보 사용)
  UPDATE = 1;     // 업데이트 버튼 시 (현재 위치 기준)
}

// 3.7 스케줄 수정
message UpdateScheduleRequest {
  string scheduleId = 1;
  string userId = 2;
  string title = 3;
  string departureTime = 4;
  string arrivalTime = 5;
  repeated MealTimeSlot mealSlots = 6;
  Location departure = 7;
  repeated Waypoint waypoints = 8;
  Location destination = 9;
  string userNote = 10;
  string purpose = 11;
  repeated string companions = 12;
}

// 3.8 스케줄 삭제
message DeleteScheduleRequest {
  string scheduleId = 1;
  string userId = 2;
}

message DeleteScheduleResponse {
  string message = 1;
  bool success = 2;
}

// 4. 외부 서비스 연동용 메시지 (Messages for External Services)

// 4.1 맛집 추천 요청 (to Recommendation Service)
message RestaurantRecommendationRequest {
  string scheduleId = 1;
  string slotId = 2;
  MealType mealType = 3;
  string scheduledTime = 4;
  MealLocation mealLocation = 5;
  int32 radius = 6;
  string userNote = 7;
}

message RestaurantRecommendationResponse {
  string requestId = 1; // 추천 요청 ID (Kafka 처리용 -> gRPC에서는 트랜잭션 ID로 사용 가능)
  bool success = 2;
}


